@@ -355,6 +355,16 @@ class EntityFindBuilder extends EntityQueryBuilder {
         boolean isFirst = true
         for (String fieldName in orderByFieldList) {
             if (!fieldName) continue
+
+            int typeValue = 1
+            Node fieldNode = getMainEd().getFieldNode(fieldName)
+            if (fieldNode != null) {
+                String javaType = efi.getFieldJavaType((String) fieldNode."@type", getMainEd().getFullEntityName())
+                typeValue = EntityFacadeImpl.getJavaTypeInt(javaType)
+            } else {
+                logger.warn("Making ORDER BY clause, could not find field [${fieldName}] in entity [${getMainEd().getEntityName()}]")
+            }
+
             if (isFirst) isFirst = false else this.sqlTopLevel.append(", ")
 
             // Parse the fieldName (can have other stuff in it, need to tear down to just the field name)
@@ -405,9 +415,9 @@ class EntityFindBuilder extends EntityQueryBuilder {
 
 
             // not that it's all torn down, build it back up using the column name
-            if (caseUpperLower != null) this.sqlTopLevel.append(caseUpperLower ? "UPPER(" : "LOWER(")
+            if (caseUpperLower != null && typeValue == 1) this.sqlTopLevel.append(caseUpperLower ? "UPPER(" : "LOWER(")
             this.sqlTopLevel.append(this.mainEntityDefinition.getColumnName(fieldName, false))
-            if (caseUpperLower != null) this.sqlTopLevel.append(")")
+            if (caseUpperLower != null && typeValue == 1) this.sqlTopLevel.append(")")
 
             this.sqlTopLevel.append(descending ? " DESC" : " ASC")
 
